# xnat-admin-tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-docker.yml  pre-commit.yml  renew_tokens.yml  xnat-quicktest.yml
xnat_admin_tools/: create_new_projects.py  create_project_command.json  get_result.py  initiate_sync.py  refresh_project_catalog.py  remove_stale_data.py  renew_xnat_tokens.py  replicate_projects.py  test_xnat_api.py
xnat_admin_tools/utils/: common.py
