[tool.poetry]
name = "xnat-admin-tools"
version = "0.1.0"
description = "BNC tools to aid admin tasks of XNAT"
authors = ["Isabel Restrepo <isabelrestre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
pyxnat = "^1.4"
python-dotenv = "^0.19.0"
psutil = "^5.8.0"
redis = "^3.5.2"
rq = "^1.10.1"
psycopg2 = "^2.9.3"
xnat-tools = {git = "https://github.com/brown-bnc/xnat-tools.git", rev = "v1.7.0"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.poetry.scripts]
xnat-cleanup ="xnat_admin_tools.remove_stale_data:main"
xnat-create-project ="xnat_admin_tools.create_new_projects:main"
xnat-renew-xnat-tokens ="xnat_admin_tools.renew_xnat_tokens:main"
xnat-sync-project ="xnat_admin_tools.initiate_sync:main"
xnat-sync-get-results ="xnat_admin_tools.get_result:main"
xnat-replicate-projects ="xnat_admin_tools.replicate_projects:main"
xnat-replicate-relay-projects ="xnat_admin_tools.replicate_projects_relays:main"
xnat-export-project-data ="xnat_admin_tools.export_project_data:main"
xnat-refresh-project-catalog ="xnat_admin_tools.refresh_project_catalog:main"
xnat-test-api="xnat_admin_tools.test_xnat_api:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
